[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/black.png" type="Texture" id=1]
[ext_resource path="res://fonts/Fibberish/Fibberish.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Screens/StartButton.gd" type="Script" id=3]
[ext_resource path="res://Screens/Menu.gd" type="Script" id=4]
[ext_resource path="res://assets/UIThemes/Menus.tres" type="Theme" id=5]
[ext_resource path="res://Objects/SoundLine.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/triangle.png" type="Texture" id=7]
[ext_resource path="res://assets/UIThemes/Credits.tres" type="Theme" id=8]
[ext_resource path="res://Objects/MenuArrows.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=2]
size = 97
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 140
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 90
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=7]
resource_name = "CreditsToMain"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 480, 993 ), Vector2( 560, 771 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -180.0, -295.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "CreditsToSettings"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -180.0, -65.4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 480, 993 ), Vector2( 390, 782 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "MainToCredits"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 65.0, 180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 560, 771 ), Vector2( 480, 993 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "MainToSettings"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 65.0, -65.4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 560, 771 ), Vector2( 390, 782 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 65.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 560, 771 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "SettingsToCredits"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -65.4, -180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 390, 782 ), Vector2( 480, 993 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "SettingsToMain"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -65.4, 65.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 390, 782 ), Vector2( 560, 771 ) ]
}

[node name="Menu" type="Node2D"]
script = ExtResource( 4 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 24.0647, 16.4033 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 560, 771 )
rotation = 1.13446
scale = Vector2( 3.33417, 3.33417 )
texture = ExtResource( 7 )

[node name="Start" type="Node2D" parent="Sprite"]
position = Vector2( -145.114, 7.45346 )
rotation = -1.13446
scale = Vector2( 0.3, 0.3 )

[node name="StartButton" type="Button" parent="Sprite/Start"]
margin_left = -8.0
margin_top = 70.0
margin_right = 296.0
margin_bottom = 162.0
focus_neighbour_right = NodePath("../../Settings/MasterSlider")
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
text = "Start"
script = ExtResource( 3 )

[node name="MenuArrow" parent="Sprite/Start" instance=ExtResource( 9 )]
position = Vector2( 365.702, 110.318 )
rotation = 1.5708
direction = "Right"

[node name="MenuArrow2" parent="Sprite/Start" instance=ExtResource( 9 )]
position = Vector2( -91.1733, 106.176 )
rotation = -1.57071

[node name="RichTextLabel" type="RichTextLabel" parent="Sprite/Start"]
margin_left = 19.0
margin_top = -215.0
margin_right = 423.0
margin_bottom = -91.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Blaster"
text = "Blaster"

[node name="RichTextLabel2" type="RichTextLabel" parent="Sprite/Start"]
margin_left = -93.0
margin_top = -41.0
margin_right = 311.0
margin_bottom = 83.0
rect_rotation = -89.7158
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Side"
text = "Side"

[node name="Settings" type="Node2D" parent="Sprite"]
position = Vector2( 72.5083, -41.4801 )
rotation = 1.14494
scale = Vector2( 0.512299, 0.512299 )

[node name="MenuArrow" parent="Sprite/Settings" instance=ExtResource( 9 )]
position = Vector2( 179.838, 14 )
rotation = 1.5708
direction = "Right"

[node name="MenuArrow2" parent="Sprite/Settings" instance=ExtResource( 9 )]
position = Vector2( -70.143, 14 )
rotation = -1.5708

[node name="MasterSlider" parent="Sprite/Settings" instance=ExtResource( 6 )]
margin_left = 150.445
margin_top = -209.683
margin_right = 150.445
margin_bottom = -209.683
focus_neighbour_bottom = NodePath("../MusicSlider")
focus_next = NodePath("../MusicSlider")
bottom_slider = "Music"
top_slider = "Master"
max_volume = 0

[node name="MusicSlider" parent="Sprite/Settings" instance=ExtResource( 6 )]
margin_left = 150.01
margin_top = -150.168
margin_right = 150.01
margin_bottom = -150.168
focus_neighbour_top = NodePath("../MasterSlider")
focus_neighbour_bottom = NodePath("../SFXSlider")
focus_next = NodePath("../SFXSlider")
focus_previous = NodePath("../MasterSlider")
bus = "Music"
bottom_slider = "SFX"
top_slider = "Master"

[node name="SFXSlider" parent="Sprite/Settings" instance=ExtResource( 6 )]
margin_left = 150.0
margin_top = -79.0
margin_right = 150.0
margin_bottom = -79.0
focus_neighbour_top = NodePath("../MusicSlider")
focus_previous = NodePath("../MusicSlider")
bus = "SFX"
bottom_slider = "SFX"
top_slider = "Music"
min_volume = -25
max_volume = 0

[node name="SettingsLabel" type="RichTextLabel" parent="Sprite/Settings"]
margin_right = 141.0
margin_bottom = 38.0
theme = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "Settings"
text = "Settings"

[node name="RichTextLabel" type="RichTextLabel" parent="Sprite/Settings"]
margin_left = -172.25
margin_top = -222.816
margin_right = -73.2503
margin_bottom = -193.816
theme = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "Master"
text = "Master"

[node name="RichTextLabel2" type="RichTextLabel" parent="Sprite/Settings"]
margin_left = -170.875
margin_top = -164.276
margin_right = -71.875
margin_bottom = -135.276
theme = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "Music"
text = "Music"

[node name="RichTextLabel3" type="RichTextLabel" parent="Sprite/Settings"]
margin_left = -171.793
margin_top = -91.6765
margin_right = -72.7925
margin_bottom = -62.6765
theme = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "Sounds"
text = "Sounds"

[node name="Credits" type="Node2D" parent="Sprite"]
position = Vector2( 129.9, 357.064 )
rotation = 3.14159
scale = Vector2( 0.3, 0.3 )

[node name="CreditsLabel" type="RichTextLabel" parent="Sprite/Credits"]
margin_left = 298.369
margin_top = 707.796
margin_right = 612.369
margin_bottom = 793.796
theme = ExtResource( 5 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Credits"
text = "Credits"

[node name="MenuArrow" parent="Sprite/Credits" instance=ExtResource( 9 )]
position = Vector2( 636.947, 744 )
rotation = 1.5708
direction = "Right"

[node name="MenuArrow2" parent="Sprite/Credits" instance=ExtResource( 9 )]
position = Vector2( 211.054, 744 )
rotation = -1.5708

[node name="Font" type="RichTextLabel" parent="Sprite/Credits"]
margin_left = -28.2542
margin_top = 214.045
margin_right = 319.746
margin_bottom = 381.045
theme = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "		Font
\"Fibberish\"
	caffinate.itch.io"
text = "		Font
\"Fibberish\"
	caffinate.itch.io"

[node name="SFX" type="RichTextLabel" parent="Sprite/Credits"]
margin_left = 254.683
margin_top = 216.068
margin_right = 633.683
margin_bottom = 440.068
theme = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "		SFX
\"Balloon Boop\"
	F.M. Audio, Freesound.org
\"Powerup 2\"
	AbbasGamez, Freesound.org"
text = "		SFX
\"Balloon Boop\"
	F.M. Audio, Freesound.org
\"Powerup 2\"
	AbbasGamez, Freesound.org"

[node name="Music" type="RichTextLabel" parent="Sprite/Credits"]
margin_left = 640.57
margin_top = 210.737
margin_right = 949.57
margin_bottom = 379.737
theme = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "	Music
\"Chiptronical\"
	Patrick de Artega"
text = "	Music
\"Chiptronical\"
	Patrick de Artega"

[node name="RichTextLabel" type="RichTextLabel" parent="Sprite/Credits"]
margin_left = 265.0
margin_top = 442.0
margin_right = 663.0
margin_bottom = 538.0
theme = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "Programming and art
	AhoyItsPhil"
text = "Programming and art
	AhoyItsPhil"

[node name="Tumblr" type="LinkButton" parent="Sprite/Credits"]
margin_left = 239.853
margin_top = 554.036
margin_right = 631.853
margin_bottom = 593.036
theme = ExtResource( 8 )
text = "https://ahoygamers.tumblr.com/"

[node name="Twitter" type="LinkButton" parent="Sprite/Credits"]
margin_left = 341.093
margin_top = 630.668
margin_right = 509.093
margin_bottom = 658.668
theme = ExtResource( 8 )
text = "@AhoyItsPhil"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CreditsToMain = SubResource( 7 )
anims/CreditsToSettings = SubResource( 9 )
anims/MainToCredits = SubResource( 8 )
anims/MainToSettings = SubResource( 4 )
anims/RESET = SubResource( 5 )
anims/SettingsToCredits = SubResource( 6 )
anims/SettingsToMain = SubResource( 10 )

[connection signal="pressed" from="Sprite/Start/StartButton" to="Sprite/Start/StartButton" method="_on_StartButton_pressed"]
[connection signal="clicked" from="Sprite/Start/MenuArrow" to="." method="_on_MenuArrow_clicked"]
[connection signal="clicked" from="Sprite/Start/MenuArrow2" to="." method="_on_MenuArrow2_clicked"]
[connection signal="clicked" from="Sprite/Settings/MenuArrow" to="." method="_on_MenuArrow_clicked"]
[connection signal="clicked" from="Sprite/Settings/MenuArrow2" to="." method="_on_MenuArrow2_clicked"]
[connection signal="change_focus" from="Sprite/Settings/MasterSlider" to="Sprite/Settings/MasterSlider" method="_on_settings_focus_shift"]
[connection signal="change_focus" from="Sprite/Settings/MasterSlider" to="Sprite/Settings/MusicSlider" method="_on_settings_focus_shift"]
[connection signal="change_focus" from="Sprite/Settings/MasterSlider" to="Sprite/Settings/SFXSlider" method="_on_settings_focus_shift"]
[connection signal="change_focus" from="Sprite/Settings/MusicSlider" to="Sprite/Settings/MasterSlider" method="_on_settings_focus_shift"]
[connection signal="change_focus" from="Sprite/Settings/MusicSlider" to="Sprite/Settings/MusicSlider" method="_on_settings_focus_shift"]
[connection signal="change_focus" from="Sprite/Settings/MusicSlider" to="Sprite/Settings/SFXSlider" method="_on_settings_focus_shift"]
[connection signal="change_focus" from="Sprite/Settings/SFXSlider" to="Sprite/Settings/MasterSlider" method="_on_settings_focus_shift"]
[connection signal="change_focus" from="Sprite/Settings/SFXSlider" to="Sprite/Settings/MusicSlider" method="_on_settings_focus_shift"]
[connection signal="change_focus" from="Sprite/Settings/SFXSlider" to="Sprite/Settings/SFXSlider" method="_on_settings_focus_shift"]
[connection signal="clicked" from="Sprite/Credits/MenuArrow" to="." method="_on_MenuArrow_clicked"]
[connection signal="clicked" from="Sprite/Credits/MenuArrow2" to="." method="_on_MenuArrow2_clicked"]
[connection signal="pressed" from="Sprite/Credits/Tumblr" to="." method="_on_LinkButton_pressed"]
[connection signal="pressed" from="Sprite/Credits/Twitter" to="." method="_on_Twitter_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
